# axolotl-companion

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  compose.hmr.yaml  compose.prod.yaml  compose.yaml  plan.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: update_contributors.py
.github/workflows/: backend-ci.yml  contributors.yml  docker-build.yml  frontend-ci.yml  pre-commit.yml
backend/: Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml
backend/scripts/: export_openapi.py
backend/src/axolotl/: __init__.py  config.py  main.py
backend/src/axolotl/api/: deps.py
backend/src/axolotl/api/v1/: auth.py  config.py  mcp.py  personas.py  pins.py  sessions.py  tools.py
backend/src/axolotl/core/: metrics.py  rate_limit.py  secrets.py  security.py  tracing.py
backend/src/axolotl/db/: __init__.py  base.py  models.py
backend/src/axolotl/db/migrations/: env.py
backend/src/axolotl/db/migrations/versions/: a5c8e92f41d0_users_default_persona.py  b1a8f2d4c9e3_messages_uuid_pk.py  c4e0d23a8fb1_mcp_servers.py  c7e9b4f38a21_sessions_uuid_pk.py  d24aa563f150_initial_schema.py  d9f1a472e883_users_locality.py  e4c0a55b21f7_users_time_temp_prefs.py  e8a7b3c2d1f0_pinned_messages.py  f2b8d14c90a3_user_defaults_session_overrides.py
backend/src/axolotl/llm/: __init__.py  client.py  events.py  mcp_client.py  orchestrator.py
backend/src/axolotl/llm/tools/: __init__.py  base.py  calculator.py  clock.py  fetch_url.py  weather.py  web_search.py  wikipedia.py
backend/src/axolotl/schemas/: auth.py  mcp.py  params.py  persona.py  pin.py  session.py  tools.py
backend/src/axolotl/services/: settings_store.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_pins.py  test_sessions.py  test_tool_calculator.py  test_tool_clock.py  test_tool_fetch_url.py  test_tool_weather.py  test_tool_wikipedia.py  test_tools.py
docker/: vllm.Dockerfile
docker/grafana/provisioning/dashboards/: axolotl-overview.json  dashboards.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docker/proxy/: Caddyfile  Dockerfile
docs/: README.md  api.md  architecture.md  auth.md  chat.md  database.md  deployment.md  features.md  models.md
docs/adr/: 001-nextjs.md  002-postgres.md  003-auth-strategy.md
docs/architecture/: README.md  adr-001-why-nextjs.md  adr-003-auth-strategy.md
frontend/: .eslintrc.json  .prettierignore  Dockerfile  components.json  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/messages/: en.json  fr.json
frontend/public/: manifest.json
frontend/public/models/: axolotl-chibi.glb
frontend/src/: auth.config.ts  auth.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  sw.ts
frontend/src/app/(app)/: layout.tsx
frontend/src/components/axolotl/: axolotl-3d.tsx  axolotl-sprite.tsx
frontend/src/components/ui/: button.tsx  (+6 more)
frontend/src/hooks/: use-api.ts  use-chat.ts  use-haptic.ts  use-mood.ts
frontend/src/i18n/: actions.ts  config.ts  request.ts
frontend/src/lib/: api.ts  hyperparams.ts  moon.ts  utils.ts
frontend/src/stores/: chat-status.ts
frontend/src/types/: api-generated.ts  api.ts  next-auth.d.ts
(+54 files in other folders)
